# crossroads-remake

./: CLAUDE.md  CMakeLists.txt  LICENSE  Makefile.emscripten  README.md  setup.sh
assets/maps/: bigger.csv  generated_classic.csv  generated_dense.csv  generated_loopy.csv  generated_symmetric.csv
src/: input.cpp  input.h  main.cpp  maze_generator.cpp  maze_generator.h  tilemap.cpp  tilemap.h
tools/: generate_maps.cpp
